--- a/src/components/wtech-popover/wtech-popover.css
+++ b/src/components/wtech-popover/wtech-popover.css
@@ -3,6 +3,46 @@
     --z-index: 30;
 }
 
+.popover-wrapper {
+    position: relative;
+    display: inline-block;
+}
+
+.popover-content {
+    z-index: 50;
+    opacity: 0;
+    visibility: hidden;
+    position: absolute;
+    background-color: var(--background);
+    padding: 1.5rem;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+    width: auto;
+    transform: translate(0,-20px);
+}
+.popover-content:before {
+    position: absolute;
+    z-index: -1;
+    content: '';
+    right: calc(50% - 10px);
+    top: -8px;
+    border-style: solid;
+    border-width: 0 10px 10px 10px;
+    border-color: transparent transparent var(--background) transparent;
+    transition-duration: 0.3s;
+    transition-property: transform;
+}
+.popover-content.active {
+    opacity: 1;
+    visibility: visible;
+}
+
+.popover-content.animated {
+    transition: all 0.3s cubic-bezier(0.75, -0.02, 0.2, 0.97);
+}
+
+/* 
+
+
 @keyframes slide-bottom {
     0% {
       opacity: 0;
@@ -31,4 +71,4 @@
     box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
     position: absolute;
     overflow: hidden auto;
-}
+} */
