--- a/src/components/wtech-backdrop/wtech-backdrop.css
+++ b/src/components/wtech-backdrop/wtech-backdrop.css
@@ -7,13 +7,16 @@
     display: block;
     position: absolute;
   
-    transform: translateZ(0);
-  
     cursor: pointer;
     opacity: .32;
     touch-action: none;
     z-index: 10;
     background-color: black;
+}
+
+:host(.backdrop-animated) {
+    transform: translateZ(0);
+    transition: all 0.3s cubic-bezier(0.75, -0.02, 0.2, 0.97);
 }
 
 :host(.backdrop-hide) {
