--- a/src/components/wtech-popover/wtech-popover.css
+++ b/src/components/wtech-popover/wtech-popover.css
@@ -1,5 +1,12 @@
-:root {
+:host {
+    /**
+     * @prop --background: Background of the popover content
+     * @prop --color: Color of the popover content
+     * @prop --z-index: z-index of popover content 
+     * @prop --arrow-size: size of the arrow
+     */
     --background: #fff;
+    --color: #000;
     --z-index: 30;
     --arrow-size: 10px;
 }
@@ -14,7 +21,8 @@
     opacity: 0;
     visibility: hidden;
     position: absolute;
-    background-color: var(--background);
+    background-color: var(--background, #fff);
+    color: var(--color, #000);
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
     width: auto;
     transform: translate(0, 10px);
@@ -25,8 +33,8 @@
     content: '';
     top: -8px;
     border-style: solid;
-    border-width: 0 var(--arrow-size) var(--arrow-size) var(--arrow-size);
-    border-color: transparent transparent var(--background) transparent;
+    border-width: 0 var(--arrow-size, 10px) var(--arrow-size, 10px) var(--arrow-size, 10px);
+    border-color: transparent transparent var(--background, #fff) transparent;
     transition-duration: 0.3s;
     transition-property: transform;
 }
